# stm32wle5-flash-algo

./: Cargo.toml  README.md  template.yaml
.cargo/: config.toml
src/: main.rs
