[package]
authors = ["Jackson Ming Hu <huming2207@gmail.com>"]
edition = "2021"
readme = "README.md"
name = "algorithm"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.0"
cortex-m-rt = "0.7.3"
flash-algorithm = { git = "https://github.com/probe-rs/flash-algorithm.git" }
rtt-target = { version = "0.3", features = ["cortex-m"] }
stm32wlxx-hal = { version = "0.6.1", features = ["stm32wle5"]}

# this lets you use `cargo fix`!
[[bin]]
name = "algorithm"
test = false
bench = false

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 's'
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false
